@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2013 Dylan Myers <dylan at dylanspcs.com>. All rights reserved.
- * Copyright (C) 2013-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2013-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -99,13 +99,11 @@ public class PersonnelMarket {
 
     public PersonnelMarket() {
         method = new PersonnelMarketDisabled();
-        MekHQ.registerHandler(this);
     }
 
     public PersonnelMarket(Campaign c) {
         generatePersonnelForDay(c);
         setType(c.getCampaignOptions().getPersonnelMarketName());
-        MekHQ.registerHandler(this);
     }
 
     /**
@@ -121,6 +119,7 @@ public class PersonnelMarket {
     }
 
     @Subscribe
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void handleCampaignOptionsEvent(OptionsChangedEvent ev) {
         setType(ev.getOptions().getPersonnelMarketName());
     }
@@ -144,11 +143,11 @@ public class PersonnelMarket {
      *                 current planetary system, date, settings, factions, and more.
      */
     public void generatePersonnelForDay(Campaign campaign) {
-        PlanetarySystem location = campaign.getLocation().getCurrentSystem();
+        PlanetarySystem location = campaign.getCurrentLocation().getCurrentSystem();
         LocalDate today = campaign.getLocalDate();
 
         // Determine conditions
-        boolean isOnPlanet = campaign.getLocation().isOnPlanet();
+        boolean isOnPlanet = campaign.getCurrentLocation().isOnPlanet();
         boolean useCapitalsHiringHallsOnly = campaign.getCampaignOptions().isUsePersonnelHireHiringHallOnly();
         boolean isHiringHall = location.isHiringHall(today);
         boolean isCapital = location.getFactionSet(today)
@@ -209,7 +208,7 @@ public class PersonnelMarket {
             report.append(':');
 
             // Add details about the first personnel's experience, primary role, and name
-            Person person = personnel.get(0);
+            Person person = personnel.getFirst();
             int experienceLevel = person.getExperienceLevel(campaign, false);
             String expLevel = SkillType.getExperienceLevelName(experienceLevel);
 
@@ -268,6 +267,7 @@ public class PersonnelMarket {
         personnel.add(p);
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void addPerson(Person p, Entity e) {
         addPerson(p);
         attachedEntities.put(p.getId(), e);
