@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2009 Jay Lawson (jaylawson39 at yahoo.com). All rights reserved.
- * Copyright (C) 2013-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2013-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -320,6 +320,7 @@ public class BattleArmorSuit extends Part {
         return clan;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public boolean isQuad() {
         return quad;
     }
@@ -328,6 +329,7 @@ public class BattleArmorSuit extends Part {
         return weightClass;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getGroundMP() {
         return groundMP;
     }
@@ -449,7 +451,7 @@ public class BattleArmorSuit extends Part {
             if (unit.getEntity().getInternal(trooper) > 0) {
                 // then there is a trooper here, so remove a crewmember
                 if (!unit.getCrew().isEmpty()) {
-                    trooperToRemove = unit.getCrew().get(unit.getCrew().size() - 1);
+                    trooperToRemove = unit.getCrew().getLast();
                     // don't remove yet - we need to first set the internal to
                     // destroyed so, this slot gets skipped over when we reset the pilot
                 }
@@ -486,12 +488,12 @@ public class BattleArmorSuit extends Part {
         for (Part p : trooperParts) {
             p.remove(salvage);
         }
-        Part spare = campaign.getWarehouse().checkForExistingSparePart(this);
+        Part spare = getWarehouse().checkForExistingSparePart(this);
         if (!salvage) {
-            campaign.getWarehouse().removePart(this);
+            getWarehouse().removePart(this);
         } else if (null != spare) {
             spare.changeQuantity(1);
-            campaign.getWarehouse().removePart(this);
+            getWarehouse().removePart(this);
         }
         setUnit(null);
         updateConditionFromEntity(false);
