@@ -53,6 +53,7 @@ import javax.swing.event.ListSelectionListener;
 
 import megamek.client.ui.preferences.JWindowPreference;
 import megamek.client.ui.preferences.PreferencesNode;
+import megamek.common.ui.FastJScrollPane;
 import megamek.logging.MMLogger;
 import mekhq.MekHQ;
 import mekhq.campaign.Campaign;
@@ -60,8 +61,9 @@ import mekhq.campaign.events.units.UnitChangedEvent;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.unit.Unit;
 import mekhq.gui.adapter.UnitTableMouseAdapter;
-import mekhq.gui.utilities.JScrollPaneWithSpeed;
 import mekhq.utilities.ReportingUtilities;
+
+import static mekhq.utilities.MHQInternationalization.getText;
 
 /**
  * This class handles the display of the Mass Mothball/Reactivate dialog
@@ -77,6 +79,7 @@ public class MassMothballDialog extends JDialog implements ActionListener, ListS
     private final Map<Integer, JLabel> timeLabelsByUnitType = new HashMap<>();
     private final Campaign campaign;
     private boolean activating;
+    private JCheckBox clearDesignationsCheckbox;
 
     private final JPanel contentPanel = new JPanel();
     // endregion Variable Declarations
@@ -126,9 +129,12 @@ public class MassMothballDialog extends JDialog implements ActionListener, ListS
         }
 
         gbc.gridy++;
+        addClearDesignationsCheckBox(gbc);
+
+        gbc.gridy++;
         addExecuteButton(activating, gbc);
 
-        JScrollPane scrollPane = new JScrollPaneWithSpeed();
+        JScrollPane scrollPane = new FastJScrollPane();
         scrollPane.setViewportView(contentPanel);
         scrollPane.setVerticalScrollBarPolicy(ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED);
         scrollPane.setMaximumSize(new Dimension(600, 600));
@@ -199,7 +205,7 @@ public class MassMothballDialog extends JDialog implements ActionListener, ListS
         DefaultListModel<Person> listModel = new DefaultListModel<>();
 
         for (Person tech : campaign.getTechs()) {
-            if (tech.canTech(unitsByType.get(unitType).get(0).getEntity())) {
+            if (tech.canTech(unitsByType.get(unitType).getFirst().getEntity())) {
                 listModel.addElement(tech);
             }
         }
@@ -209,7 +215,7 @@ public class MassMothballDialog extends JDialog implements ActionListener, ListS
         techList.setBorder(new LineBorder(Color.GRAY, 1));
         techList.setCellRenderer(new TechListCellRenderer());
 
-        JScrollPane techListPane = new JScrollPaneWithSpeed();
+        JScrollPane techListPane = new FastJScrollPane();
         techListPane.setViewportView(techList);
         techListPane.setMaximumSize(new Dimension(200, 400));
         techListPane.setMinimumSize(new Dimension(200, 150));
@@ -246,6 +252,24 @@ public class MassMothballDialog extends JDialog implements ActionListener, ListS
                                              UnitTableMouseAdapter.COMMAND_MOTHBALL);
         buttonExecute.addActionListener(this);
         contentPanel.add(buttonExecute, gbc);
+    }
+
+    /**
+     * Renders a checkbox to remove designations/assignments to the content pane
+     *
+     * @param gbc       the input gridBagConstraints to use
+     */
+
+    private void addClearDesignationsCheckBox(GridBagConstraints gbc) {
+        if (!activating) {
+            gbc.gridx = 1;
+            gbc.weightx = 0.8;
+            gbc.weighty = 0.1;
+            gbc.anchor = GridBagConstraints.CENTER;
+            clearDesignationsCheckbox = new JCheckBox();
+            clearDesignationsCheckbox.setText(getText("mothballUnit.clearDesignationsDialog.text"));
+            contentPanel.add(clearDesignationsCheckbox, gbc);
+        }
     }
 
     /**
@@ -304,6 +328,10 @@ public class MassMothballDialog extends JDialog implements ActionListener, ListS
                 UUID id = selectedTechs.get(techIndex).getId();
                 Person tech = campaign.getPerson(id);
                 if (isMothballing) {
+                    if (clearDesignationsCheckbox != null && clearDesignationsCheckbox.isSelected()) {
+                        unit.clearCrew();
+                        unit.getCampaign().removeUnitFromFormation(unit);
+                    }
                     unit.startMothballing(tech);
                 } else {
                     unit.startActivating(tech);
